# keynesis-c

./: Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml
.github/workflows/: ci_checks.yaml  ci_platforms.yaml
src/: lib.rs  rng.rs
src/keys/: curve25519.rs  ed25519.rs  ed25519_extended.rs  ed25519_hd.rs  mod.rs
src/noise/: ik.rs  mod.rs  n.rs  transport_state.rs  x.rs
