[package]
name = "keynesis-c"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas@primetype.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "keynesis"
crate-type = [ "staticlib" , "cdylib" ]

[dependencies]
keynesis = { version = "1.4" }
anyhow = "1.0"
rand_core = { version = "0.6.2" }
rand_chacha = { version = "0.3" }

[build-dependencies]
cbindgen = "0.19"

[profile.release]
lto = "yes"